--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chat Privé</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tafita Chat App</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-  <script defer src="app.js"></script>
 </head>
 <body>
-  <div id="auth">
-    <h2>Connexion</h2>
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Mot de passe" />
-    <button onclick="login()">Se connecter</button>
-    <button onclick="signup()">Créer un compte</button>
+  <div class="chat-container">
+    <header>
+      <h1>Chat Instantané</h1>
+      <p>Ton ID : <span id="myId"></span></p>
+    </header>
+    <section id="chatBox">
+      <div id="messages"></div>
+      <input type="text" id="target" placeholder="ID de l'ami">
+      <input type="text" id="message" placeholder="Ton message...">
+      <button id="send">Envoyer</button>
+    </section>
   </div>
-
-  <div id="chat" class="hidden">
-    <h2>Chat</h2>
-    <p>Votre ID : <span id="myUid"></span></p>
-    <input type="text" id="targetUid" placeholder="UID du destinataire" />
-    <div id="messages"></div>
-    <input type="text" id="messageInput" placeholder="Message" />
-    <button onclick="sendMessage()">Envoyer</button>
-    <button onclick="logout()">Déconnexion</button>
-  </div>
+  <script src="app.js"></script>
 </body>
 </html>
