--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Login - TafitaFaceboot</title>
+  <title>Connexion – ChatApp</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>TafitaFaceboot</h1>
+  <div class="auth-container">
+    <h1>ChatApp</h1>
     <input type="email" id="email" placeholder="Email">
     <input type="password" id="password" placeholder="Mot de passe">
-    <button onclick="login()">Se connecter</button>
-    <button onclick="signup()">Créer un compte</button>
-    <p id="error"></p>
+    <button id="loginBtn">Se connecter</button>
+    <p>Pas encore inscrit ? <a href="register.html">Créer un compte</a></p>
+    <p id="error" class="error"></p>
   </div>
 
-  <script type="module" src="script.js"></script>
+  <script type="module" src="auth.js"></script>
 </body>
 </html>
