--- a/public/chat.html
+++ b/public/chat.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Chat – ChatApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <div class="wrapper">
 
-    <!-- Liste des amis / recherche -->
-    <div class="sidebar">
+    <!-- Sidebar utilisateurs -->
+    <div class="sidebar" id="sidebar">
       <div class="profile">
-        <img id="myAvatar" src="" alt="PDP">
+        <img id="myAvatar" src="default-avatar.png" alt="PDP">
         <span id="myName"></span>
         <button id="logoutBtn">Déconnexion</button>
       </div>
@@ -21,8 +22,9 @@
     </div>
 
     <!-- Zone de chat -->
-    <div class="chat-area">
-      <div id="chatHeader" class="chat-header">
+    <div class="chat-area hidden" id="chatArea">
+      <div class="chat-header">
+        <button id="backBtn" class="back-btn">←</button>
         <span id="chatWith">Sélectionne un ami</span>
       </div>
       <div id="messages" class="messages"></div>
