--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Connexion – ChatApp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,10 +12,15 @@
     <input type="email" id="email" placeholder="Email">
     <input type="password" id="password" placeholder="Mot de passe">
     <button id="loginBtn">Se connecter</button>
-    <p>Pas encore inscrit ? <a href="register.html">Créer un compte</a></p>
+    <button id="signupRedirectBtn">Créer un compte</button>
     <p id="error" class="error"></p>
   </div>
 
+  <script>
+    document.getElementById('signupRedirectBtn').onclick = () => {
+      location.href = 'register.html';
+    };
+  </script>
   <script type="module" src="auth.js"></script>
 </body>
 </html>
