--- a/public/chat.html
+++ b/public/chat.html
@@ -17,9 +17,13 @@
         <span id="myName">Mon Nom</span>
         <button id="logoutBtn">⎋</button>
       </header>
+
+      <!-- Zone de recherche améliorée -->
       <div class="search-box">
         <input type="text" id="searchUser" placeholder="🔍 Rechercher un ami...">
+        <button id="searchBtn" class="search-btn">🔎</button>
       </div>
+
       <ul id="usersList" class="users-list"></ul>
     </aside>
 
