--- a/public/chat.html
+++ b/public/chat.html
@@ -1,35 +1,33 @@
-<!-- public/chat.html -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Messagerie</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="chat.css">
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TafiMessenger - Chat</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="chat-app">
+  <div class="chat-container">
     <div class="sidebar">
-      <input type="text" id="searchInput" placeholder="Rechercher un utilisateur par email...">
-      <button onclick="searchUser()">🔍</button>
-      <div id="usersList"></div>
+      <input type="text" id="searchUser" placeholder="Rechercher par e-mail..." />
+      <button onclick="searchUser()">Rechercher</button>
+      <ul id="userList"></ul>
     </div>
 
-    <div class="chat-section">
+    <div class="chat-box">
       <div id="chatHeader"></div>
-      <div id="chatMessages" class="messages"></div>
-      <div class="input-area">
-        <input type="text" id="messageInput" placeholder="Écris ton message...">
+      <div id="messages"></div>
+      <div class="chat-input">
+        <input type="text" id="messageInput" placeholder="Écrire un message..." />
         <button onclick="sendMessage()">Envoyer</button>
       </div>
     </div>
   </div>
 
-  <script src="firebaseConfig.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+  <script src="firebase-config.js"></script>
   <script src="chat.js"></script>
 </body>
 </html>
