--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Connexion - TafiMessenger</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chat Web Firebase</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="auth-container">
-    <h2>TafiMessenger</h2>
-    <div id="auth-forms">
-      <input type="text" id="name" placeholder="Nom complet (inscription)" />
-      <input type="email" id="email" placeholder="Adresse e-mail" />
-      <input type="password" id="password" placeholder="Mot de passe" />
-      <input type="text" id="profilePic" placeholder="Lien image de profil (facultatif)" />
-
-      <button onclick="signUp()">Créer un compte</button>
-      <button onclick="signIn()">Se connecter</button>
-    </div>
+  <div id="auth-container">
+    <h2>Connexion / Inscription</h2>
+    <input type="text" id="username" placeholder="Nom d'utilisateur">
+    <input type="email" id="email" placeholder="Email">
+    <input type="password" id="password" placeholder="Mot de passe">
+    <button id="signupBtn">Créer un compte</button>
+    <button id="loginBtn">Se connecter</button>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-  <script src="firebase-config.js"></script>
-  <script src="auth.js"></script>
+  <div id="chat-container" style="display:none;">
+    <h3 id="current-user"></h3>
+    <input type="text" id="searchEmail" placeholder="Email de l'ami à rechercher">
+    <button id="searchBtn">Rechercher</button>
+    <div id="foundUser"></div>
+    <div id="messages"></div>
+    <input type="text" id="messageInput" placeholder="Votre message...">
+    <button id="sendBtn">Envoyer</button>
+  </div>
+
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
