--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Connexion</title>
+  <link rel="stylesheet" href="styles.css" />
   <script type="module" src="auth.js"></script>
 </head>
 <body>
