--- a/public/home.html
+++ b/public/home.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Messagerie</title>
+  <link rel="stylesheet" href="styles.css" />
   <script type="module" src="home.js"></script>
 </head>
 <body>
